# ComfyUI-NS-Util

./: .gitignore  README.md  README_JP.md  __init__.py  pyproject.toml  readme-ja.md  requirements.txt
.github/workflows/: publish_action.yml
nodes/: AlbedoMapFilter.py  FlexPreset.py  ManySlider.py  PromptList.py  ToonFilter.py  cross_attention_recycler.py  dual_encoder_guidance.py  micro_conditioning.py  prompt_list_node.py  refiner_boundary_optimizer.py  simple_llm_advanced.py  simple_llm_nodes.py
nodes/LLM/: simpleLLM.json
nodes/ManySliders/: settings.yaml
nodes/presets/: NS_workflow.yaml  sample.yaml
nodes/promptlistYAML/: free.yaml  prompt.yaml
web/: ns_flexpreset.js  ns_promptlist.js  simple_llm_widgets.js
workflow/: SimpleLLM_Basic_TextGeneration (1).json  SimpleLLM_Basic_TextGeneration.json
