[project]
name = "comfyui-ns-util"
description = "Flexible configuration management with YAML presets and LLM and Graphic Filters"
version = "0.2.0"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/NakamuraShippo/ComfyUI-NS-Util"

[tool.comfy]
PublisherId = "nakamurashippo"
DisplayName = "ComfyUI-NS-Util"
Icon = ""
